<resources>
    <string name="app_name">🐻‍❄️ PolarBearBnB</string>

<!--  Block 1: House Description  -->
    <string name="house_description">ENTIRE HOUSE</string>
    <string name="house_image_description">House of Polar Bear</string>
    <string name="house_price">125🐧 / night</string>
    <string name="house_rating">⭐ 4.9</string>

<!--  Block 2: Check-in/Check-out Information  -->
    <string name="check_in_title">Check-in</string>
    <string name="check_out_title">Check-out</string>
    <string name="check_in_number">Polar Bears</string>
    <string name="check_in_info_text">01 Dec</string>
    <string name="check_out_info_text">10 Dec</string>
    <string name="check_in_number_info">2 🐻‍❄️</string>

<!--    Block 3: Work Trip Info  -->
    <string name="work_trip_info_title">Is this a work trip?</string>

<!--    Block 4: Price Details  -->
    <string name="price_title">FEES AND TAX Details</string>
    <string name="ex_icon_description">exclamationicon</string>
    <string name="fee_tooltips_text">This includes service fees and local taxes. The final amount will be shown before payment.</string>"
    <string name="number_of_nights">🐧157 × 7 nights</string>
    <string name="number_of_nights_value">🐧 1,097</string>
    <string name="long_stay_discount_title">Long-stay discount</string>
    <string name="long_stay_discount_value">- 🐧110</string>
    <string name="early_polar_bear_discount_title">Early-🐻‍❄️ discount: 10% off</string>
    <string name="early_polar_bear_discount_value">- 🐧110</string>
    <string name="cleaning_fee_title">Cleaning fee</string>
    <string name="cleaning_fee_value">🐧102</string>
    <string name="service_fee_title">Service fee</string>
    <string name="service_fee_value">🐧166</string>
    <string name="carbon_taxes_fee_title">Carbon taxes and fees</string>
    <string name="carbon_taxes_fee_value">🐧180</string>

<!--    Block 5: Total Price  -->
    <string name="total_price_title">Total</string>
    <string name="total_price_value">🐧1,097 penguins</string>

<!--    Reserve Button-->
    <string name="reserve_button_text">Reserve</string>
</resources>