<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:background="@color/airbnb_red"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title">

        <!-- Block 1: House Description  -->
        <LinearLayout
            android:id="@+id/house_description_block"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/house_description_block_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/house_image">

                <TextView
                    android:id="@+id/house_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/house_description"
                    android:textColor="@color/dark_grey"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_title" />

                <TextView
                    android:id="@+id/house_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/house_price"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/house_description" />

                <TextView
                    android:id="@+id/house_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/house_rating"
                    android:textColor="@color/star_green"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/house_price" />
            </LinearLayout>

            <ImageView
                android:id="@+id/house_image"
                android:layout_width="180dp"
                android:layout_height="120dp"
                android:layout_marginStart="40dp"
                android:contentDescription="@string/house_image_description"
                android:src="@drawable/house_of_polar_bear"
                app:layout_constraintStart_toEndOf="@+id/house_description_block_content" />
        </LinearLayout>

        <!-- Division Line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/light_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/house_description_block" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>